syntax = "proto3";

option csharp_namespace = "XYZ.AuthService.Protos";

service Auth {
  rpc Login (LoginRequest) returns (AuthResponse);
  rpc Register (RegisterRequest) returns (AuthResponse);
  rpc ValidateToken (ValidateRequest) returns (ValidateResponse);
  rpc RefreshToken (RefreshRequest) returns (AuthResponse);
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message RegisterRequest {
  string username = 1;
  string password = 2;
  string role = 3;
}

message AuthResponse {
  string token = 1;
  string refreshToken = 2;
  string role = 3;
}

message ValidateRequest {
  string token = 1;
}

message ValidateResponse {
  bool isValid = 1;
  string role = 2;
}

message RefreshRequest {
  string refreshToken = 1;
}